<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/artur_vasilov_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorGray"
        android:text="@string/artur_vasilov_menu"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/menu_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice" />

    <TextView
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todays_reports"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/main_menu_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/konstantin_tskhovrebov_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorGray"
        android:text="@string/konstantin_menu_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/menu_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artur_vasilov_menu" />

    <Button
        android:id="@+id/evgeniy_shishkin_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorGray"
        android:text="@string/evgeniy_menu_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/menu_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/konstantin_tskhovrebov_menu" />

    <Button
        android:id="@+id/ilya_klimov_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorGray"
        android:text="@string/ilya_menu_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/menu_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evgeniy_shishkin_menu" />

    <Button
        android:id="@+id/about_author_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/about_author"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/menu_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilya_klimov_menu" />


</android.support.constraint.ConstraintLayout>
