<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutAuthorsActivity">

    <ImageView
            android:layout_width="136dp"
            android:layout_height="164dp"
            app:srcCompat="@drawable/artur_avatar"
            android:id="@+id/avatar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/my_photo"/>

    <TextView
            android:text="@string/artur_nurtdinov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/author_name_text_size"
            app:layout_constraintLeft_toLeftOf="@+id/avatar"
            android:id="@+id/full_name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/software_engineering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMagneta"
            android:textSize="@dimen/specialization_text_size"
            android:id="@+id/specialization"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/full_name"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/spbpu_russia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/university"
            android:textSize="@dimen/specialization_text_size"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/specialization"/>

    <ImageView
            android:layout_width="47dp"
            android:layout_height="47dp"
            app:srcCompat="@drawable/telegram_icon"
            android:id="@+id/imageTelegram"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/university"
            android:contentDescription="@string/telegram_icon"/>

    <TextView
            android:text="@string/info_about_artur_nurtdinov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_about_person"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageTelegram"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/report_text_size"
            app:layout_constraintStart_toStartOf="parent"
            />

    <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/info_about_person"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorGray"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:textColor="@color/colorBlack"
                android:text="@string/artur_nurtdinov_title"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:id="@+id/report_title"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/report_text_size"
                android:text="@string/room_number_one"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/report_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:id="@+id/room_number"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:padding="2dp"
                android:textSize="@dimen/tag_text_size"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/room_number"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:id="@+id/tag"
                android:layout_marginTop="4dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_11_15"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/tag_text_size"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/tag"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:id="@+id/report_time"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_report_in_about_authors"
                android:textSize="@dimen/specialization_text_size"
                android:textColor="@color/colorMagneta"
                app:layout_constraintStart_toEndOf="@+id/report_time"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tag"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>